--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,1 +1,7 @@
-<p>search-bar works!</p>
+<div class="search-container">
+    <form class="search-form">
+        <span class="logo" routerLink="/">NgVGDB</span>
+        <input name="search" placeholder="Search 500,000+ games" ngModel class="search-input">
+        <button type="submit">Search</button>
+    </form>
+</div>
