--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -27,8 +27,17 @@
     outline: none;
     border: none;
   }
+}
 
-  &-button {
+.logo {
+  margin-left: 10px;
+  color: #fff;
+  font-weight: 700;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+button {
     border: none;
     outline: none;
     background: #3f51b5;
@@ -46,13 +55,4 @@
       background-color: #fff;
       border: 1px solid #3f51b5;
     }
-  }
-}
-
-.logo {
-  margin-left: 10px;
-  color: #fff;
-  font-weight: 700;
-  cursor: pointer;
-  text-decoration: none;
 }
