--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <div class="search-container">
-    <form class="search-form">
+    <form class="search-form" #form="ngForm" (ngSubmit)="onSubmit(form)">
         <span class="logo" routerLink="/">NgVGDB</span>
         <input name="search" placeholder="Search 500,000+ games" ngModel class="search-input">
         <button type="submit">Search</button>
