--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,3 +15,17 @@
             </mat-select>
     </mat-form-field>
 </div>
+
+<div class="games">
+    <div class="game">
+        <div class="game-thumb-container">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/813gXz6Vi0L._SL1500_.jpg" alt="thumbnail" class="game-thumbnail">
+        </div>
+        <div class="game-description">
+            <p class="game-name">Name</p>
+            <div class="game-platforms">
+                <img src="https://store-images.s-microsoft.com/image/apps.38595.13798539581762600.215d02f1-0142-4972-88fb-175001d957e3.4cc7b353-559a-4bf8-8bad-8c88c6957b08" alt="slug" class="game-platform">
+            </div>
+        </div>
+    </div>
+</div>
